Corrected CSS and Javascript paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>PreDev Financial Modelling</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
@@ -20,9 +20,9 @@
 <h1>
   Real Estate ROI Calculator
 </h1>
-<h2>
+<p>
   I'm hoping to create something similiar to the mortgage calculator on <a href="https://www.compass.com/calculators/mortgage-calculator/">Compass's website</a>, but it's proving tricky!
-  </h2>
+</p>
 <p>
 Total Development Cost: $ <span id="TDC"></span>m
 </p>
