--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-</head>
-
-<body>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
-</body>
+</head>
 
 </html>
 <h1>
@@ -24,33 +21,29 @@
   I'm hoping to create something similiar to the mortgage calculator on <a href="https://www.compass.com/calculators/mortgage-calculator/">Compass's website</a>, but it's proving tricky!
 </p>
 <p>
-Total Development Cost: $ <span id="TDC"></span>m
+Total Development Cost: $ <span id="tdc"></span>m
 </p>
 
 <form class = "Filled in form"
-<div class="slidecontainer">
-  <input type="range" min="0" max="1000" value="350" step="0.1" class="slider" id="TotalDevCost">
+<div class=".slidecontainer">
+  <input type="range" min="0" max="1000" value="350" step="0.1" class="slider" id="slidertdc">
 
-<p>  Equity Invested: $ <span id="Investment"></span>m
+<p>  Equity Invested: $ <span id="invest"></span>m
 </p>
 <form class = "Filled in form"
 <div class="slidecontainer">
-  <input type="range" min="0" max="1000" value="350" step = "0.1" class="slider" id="Equity">
+  <input type="range" min="0" max="1000" value="350" step = "0.1" class="slider" id="equity">
 
   <p>
   Debt: $ <span id="Owed"></span>m
-  <p/>
-  <p>
-  <div>
-  gotta fix that ^
-  </div>
   </p>
 <form class = "Filled in form"
 <div class="slidecontainer">
-  <input type="range" min="0" max="1000" value="350" step = "0.1" class="slider" id="Debt">
+  <input type="range" min="0" max="1000" value="350" step = "0.1" class="slider" id="debt">
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
+
+<!-- i can leave a note for future me about what I am doing here -->
 
 
 <!-- i can leave a note for future me about what I am doing here -->
