--- a/index.html
+++ b/index.html
@@ -1,46 +1,42 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>PreDev Financial Modelling</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+    <title>PreDev Financial Modelling</title>
+    <meta name="description" content="The HTML5 Herald">
+    <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
-</head>
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
+  </head>
+  <body>
+    <h1>
+      Real Estate Development Costs
+    </h1>
+    <h2> Equity vs. Debt </h2>
+    <p>
+      I'm hoping to create something similiar to the mortgage calculator on <a href="https://www.compass.com/calculators/mortgage-calculator/">Compass's website</a>, but it's proving tricky!
+    </p>
+
+    <p>Total Development Cost: $ <span id="tdc"></span>m</p>
+    <div class="slidecontainer">
+      <input type="range" min="0" max="1000" value="800" step="0.1" class="slider" id="totaldevcost">
+    </div>
+
+    <p>  Equity: $ <span id="invest"></span>m Debt: $ <span id="owed"></span>m</p>
+
+    <div class="slidecontainer">
+      <input type="range" min="0" max="1000" value="400" step = "0.1" class="slider" id="equity">
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+
+  </body>
 
 </html>
-<h1>
-  Real Estate ROI Calculator
-</h1>
-<p>
-  I'm hoping to create something similiar to the mortgage calculator on <a href="https://www.compass.com/calculators/mortgage-calculator/">Compass's website</a>, but it's proving tricky!
-</p>
-<p>
-Total Development Cost: $ <span id="tdc"></span>m
-</p>
-
-<form class = "Filled in form"
-<div class=".slidecontainer">
-  <input type="range" min="0" max="1000" value="350" step="0.1" class="slider" id="slidertdc">
-
-<p>  Equity Invested: $ <span id="invest"></span>m
-</p>
-<form class = "Filled in form"
-<div class="slidecontainer">
-  <input type="range" min="0" max="1000" value="350" step = "0.1" class="slider" id="equity">
-
-  <p>
-  Debt: $ <span id="Owed"></span>m
-  </p>
-<form class = "Filled in form"
-<div class="slidecontainer">
-  <input type="range" min="0" max="1000" value="350" step = "0.1" class="slider" id="debt">
-
 
 
 <!-- i can leave a note for future me about what I am doing here -->
